# lance-namespace

./: .bumpversion.toml  .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  Makefile  PATCH_NOTES.md  README.md  index.html  pyproject.toml  sitemap.xml
.cargo/: config.toml
.github/workflows/: auto-bump.yml  java-lancedb.yml  java-publish.yml  java-release.yml  java-unity.yml  java.yml  python-publish.yml  python-release.yml  python.yml  release.yml  rust-publish.yml  rust-release.yml  rust.yml  spec.yml
ci/: bump_version.py  calculate_version.py  generate_release_notes.py
contributing/: index.html
docs/: Makefile  mkdocs.yml
docs/src/: .pages  concepts.md  contributing.md  dir.md  impl-spec-template.md  index.md  rest.yaml
docs/src/client/: .pages  index.md  object-relationship.md
docs/src/dir/: .pages  catalog-spec.md  impl-spec.md  partition-spec.md
docs/src/impls/: .pages  dataproc.md  dir.md  glue.md  gravitino.md  index.md  onelake.md  polaris.md  unity.md
docs/src/integrations/: template.md
docs/src/operations/: .pages  alter-table-add-columns.md  alter-table-alter-columns.md  alter-table-drop-columns.md  alter-transaction.md  analyze-table-query-plan.md  count-table-rows.md  create-empty-table.md  create-namespace.md  create-table-index.md  create-table-tag.md  create-table.md  delete-from-table.md  delete-table-tag.md  deregister-table.md  describe-namespace.md  describe-table-index-stats.md  describe-table.md  describe-transaction.md  drop-namespace.md  drop-table-index.md  drop-table.md  explain-table-query-plan.md  get-table-stats.md  get-table-tag-version.md  index.md  insert-into-table.md  list-namespaces.md  list-table-indices.md  list-table-tags.md  list-table-versions.md  list-tables.md  merge-insert-into-table.md  namespace-exists.md  query-table.md  register-table.md  restore-table.md  table-exists.md  update-table-tag.md  update-table.md
docs/src/rest/: .pages  catalog-spec.md  impl-spec.md  index.md  list-table-tags.md  partition-spec.md
docs/src/spec/: .pages  concepts.md  rest.yaml
docs/src/user-guide/: java-sdk.md  overview.md
java/: LANCEDB_VECTOR_QUERY_ANALYSIS.md  Makefile  checkstyle-suppressions.xml  pom.xml  springboot-server-pom.xml
java/lance-catalog-apache-client/: README.md
java/lance-catalog-apache-client/.openapi-generator/: FILES
java/lance-catalog-apache-client/api/: openapi.yaml
java/lance-catalog-apache-client/docs/: AlterTransactionAction.md  AlterTransactionSetProperty.md  AlterTransactionSetStatus.md  AlterTransactionUnsetProperty.md  CatalogApi.md  CreateCatalogRequest.md  CreateCatalogResponse.md  CreateTableRequest.md  Field.md  GetCatalogResponse.md  GetTableResponse.md  GetTransactionResponse.md  ListCatalogsResponse.md  NamespaceApi.md  RegisterTableRequest.md  Schema.md  TableApi.md  TransactionApi.md  WriterVersion.md
java/lance-catalog-springboot-server/.openapi-generator/: FILES
java/lance-namespace-adapter/: pom.xml
java/lance-namespace-apache-client/: README.md  pom.xml
java/lance-namespace-apache-client/.openapi-generator/: FILES
java/lance-namespace-apache-client/api/: openapi.yaml
java/lance-namespace-apache-client/docs/: AlterTableAddColumns400Response.md  AlterTableAddColumnsRequest.md  AlterTableAlterColumns400Response.md  AlterTableAlterColumnsRequest.md  (+82 more)
java/lance-namespace-client-core/: pom.xml
java/lance-namespace-core/: pom.xml
java/lance-namespace-dir/: pom.xml
java/lance-namespace-glue/: pom.xml
java/lance-namespace-gravitino/: README.md  pom.xml
java/lance-namespace-hive-base/: pom.xml
java/lance-namespace-hive2/: pom.xml
java/lance-namespace-hive3/: pom.xml
java/lance-namespace-lancedb/: pom.xml
java/lance-namespace-polaris/: README.md  pom.xml
java/lance-namespace-server-core/: pom.xml
java/lance-namespace-springboot-server/: pom.xml
java/lance-namespace-unity/: README.md  pom.xml
python/: Makefile  pyproject.lance_namespace.toml  pyproject.urllib3_client.toml
python/lance_catalog_urllib3_client/: README.md  pyproject.toml
python/lance_namespace/: UNITY_README.md  pyproject.toml
python/lance_namespace/examples/: unity_example.py
python/lance_namespace/lance_namespace/: __init__.py
python/lance_namespace/src/lance_namespace/: dir.py  glue.py  hive.py  namespace.py  rest.py  schema.py
python/lance_namespace/tests/: test_dir.py  test_glue.py  test_hive.py  test_rest.py  test_schema.py
python/lance_namespace_urllib3_client/: README.md  pyproject.toml
rust/: Cargo.toml  Makefile  README.md  reqwest-client.toml
rust/lance-catalog-reqwest-client/: Cargo.toml  README.md
rust/lance-namespace/: Cargo.toml  README.md
rust/lance-namespace-reqwest-client/: Cargo.toml  README.md
rust/lance-namespace/examples/: per_operation_config.rs
rust/lance-namespace/src/: connect.rs  dir.rs  error.rs  lib.rs  namespace.rs  rest.rs  schema.rs
rust/lance-namespace/tests/: test_dir.rs
search/: search_index.json
spec/: catalog.yaml  rest-catalog.yaml  rest.yaml  spec.md
spec/concepts/: index.html
spec/implementations/: index.html
spec/impls/: index.html
spec/operations/: index.html
spec/spec/: index.html
spec/tools/: index.html
user-guide/java-sdk/: index.html
(+1542 files in other folders)
