[project]
name = "lance-namespace"
version = "0.1.0"
description = "Lance Namespace interface and plugin registry"
readme = "README.md"
authors = [{ name = "LanceDB Devs", email = "dev@lancedb.com" }]
license = { text = "Apache-2.0" }
keywords = ["lance", "namespace", "lancedb", "vector-database"]
requires-python = ">=3.8"
dependencies = [
    "lance-namespace-urllib3-client",
]

[dependency-groups]
dev = [
    "pytest>=7.2.1",
    "pytest-cov>=2.8.1",
]

[project.urls]
Repository = "https://github.com/lancedb/lance-namespace"
Documentation = "https://lancedb.github.io/lance-namespace"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lance_namespace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
