[project]
name = "lance-namespace"
version = "0.2.0"
description = "Lance Namespace interface and plugin registry"
readme = "README.md"
authors = [{ name = "LanceDB Devs", email = "dev@lancedb.com" }]
license = { text = "Apache-2.0" }
keywords = ["lance", "namespace", "lancedb", "vector-database"]
requires-python = ">=3.8"
dependencies = [
    "lance-namespace-urllib3-client",
]

[dependency-groups]
dev = [
    "pytest>=7.2.1",
    "pytest-cov>=2.8.1",
]

[project.urls]
Repository = "https://github.com/lance-format/lance-namespace"
Documentation = "https://lance.org/format/namespace/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The pyproject.toml is inside the lance_namespace directory, so we include "."
# to include the current directory as the package
packages = ["."]

# Map the current directory to the lance_namespace package name
[tool.hatch.build.targets.wheel.sources]
"." = "lance_namespace"

[tool.pytest.ini_options]
testpaths = ["tests"]
