[package]
name = "lance-namespace"
version = "0.1.0"
edition = "2021"
authors = ["Lance Namespace Contributors"]
description = "Lance Namespace Rust Client - A unified interface for managing namespaces and tables"
license = "Apache-2.0"
repository = "https://github.com/lancedb/lance-namespace"
documentation = "https://docs.rs/lance-namespace"
keywords = ["lance", "namespace", "table", "database"]
categories = ["database"]

[features]
default = []
# Enable when Lance compilation issues are fixed
lance-integration = ["lance"]

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
bytes = "1.5"
# Lance has compilation issues with tempfile in version 0.32-0.33
lance = { version = "0.33", optional = true }
opendal = { version = "0.54", features = ["services-fs"] }
arrow = "56.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Use models from the reqwest client
lance-namespace-reqwest-client = { path = "../lance-namespace-reqwest-client" }

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
tempfile = "3.8"