[package]
name = "lance-namespace"
version = "0.0.16"
edition = "2021"
authors = ["Lance Namespace Contributors"]
description = "Lance Namespace Rust Client - A unified interface for managing namespaces and tables"
license = "Apache-2.0"
repository = "https://github.com/lancedb/lance-namespace"
documentation = "https://docs.rs/lance-namespace"
readme = "README.md"
keywords = ["lance", "namespace", "table", "database"]
categories = ["database"]

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
bytes = "1.5"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "charset",
    "gzip",
    "http2",
    "stream",
    "rustls-tls-native-roots"
] }
lance = ">=0.37"
opendal = { version = ">=0.54", features = ["services-fs", "services-s3", "services-gcs", "services-azblob"] }
arrow = "55.2"
serde_json = "1.0"
url = "2.5"

# Use models from the reqwest client
lance-namespace-reqwest-client = { workspace = true }

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
wiremock = "0.6"
tempfile = "3.20"
